doc:modify swag
